--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 .App {
-  height: 100vh;
-  background-color: rgb(136,84,208);
-  background: linear-gradient(90deg, rgba(136,84,208,1) 0%, rgba(130,88,159,1) 38%, rgba(252,66,123,1) 100%);
-  overflow: scroll;
+  
   text-align: center;
 }
 
@@ -13,7 +10,20 @@
   justify-content: center;
   padding: 0 30px 0 30px;
 }
-
+.header-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* position: absolute; */
+  /* width: 100%; */
+  padding-bottom: 45px;
+}
+.header {
+  margin: 0;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+}
 .authed-container {
   height: 100%;
   display: flex;
@@ -21,20 +31,6 @@
   padding: 30px;
 }
 
-.header-container{
-  margin: 0;
-  top: 0;
-  z-index: 5;
-  
-}
-
-.header {
-  margin: 0;
-  font-size: 50px;
-  font-weight: bold;
-  color: white;
-  z-index: 5;
-}
 
 .sub-text {
   font-size: 25px;
@@ -78,11 +74,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  width: 100%;
+  /* position: absolute; */
+  /* width: 100%;
   bottom: 0;
-  left: 0;
-  padding-bottom: 45px;
+  left: 0; */
+  /* padding-bottom: 45px; */
 }
 
 .twitter-logo {
@@ -98,8 +94,9 @@
 
 .gif-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-gap: 1.5rem;
+  grid-template-columns: 1fr 1fr ;
+  /* grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr)); */
+  grid-gap: 0.5rem;
   justify-items: center;
   margin: 0;
   padding: 0;
@@ -114,7 +111,7 @@
 }
 
 .gif-item img {
-  width: 100%;
+  width: 300px;
   height: 300px;
   border-radius: 10px;
   object-fit: cover;
@@ -122,7 +119,6 @@
 
 .connected-container input[type='text'] {
   display: inline-block;
-  /* position: fixed; */
   color: white;
   padding: 10px;
   width: 50%;
